# 2D-Racing-Game

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  IDEAS.md  LICENSE  Makefile  README.md  RUN_GUIDE.md  TODO.md  compile_commands.json  definitely-not-Makefile  docker-compose.yml  lap_times.json  server.py
.cache/clangd/index/: collisionManager.cpp.5EFC52F08EDBA3DE.idx  collisionManager.hpp.E9C464C883949CD1.idx  engine.cpp.536F01B6DD937801.idx  engine.hpp.ECC0AF6984C32725.idx  errorLoger.cpp.05FDE53DF209B913.idx  errorLoger.hpp.988EA347EB58779A.idx  gameConstants.hpp.7E8BE9F450D403F6.idx  gameObject.cpp.EFD220D46D1DB8FC.idx  gameObject.hpp.5E8BB6894D9415BE.idx  inputManager.cpp.6E0A09D3F7F0F9E5.idx  inputManager.hpp.D317ECE51F92C4AE.idx  lapTimer.cpp.CB4A980C7F7CB8EE.idx  lapTimer.hpp.3E81041D303CE0D1.idx  main.cpp.B33496FF739C51DA.idx  menu.cpp.8B3CD4D0C8820806.idx  menu.hpp.D8B5F7A7CF5306AA.idx  textureManager.cpp.35984AE295D1E9EC.idx  textureManager.hpp.FEC30F092A750086.idx
.github/workflows/: build-cpp.yml  build-docker.yml
assets/: updater.sh
include/: collisionManager.hpp  debugOverlay.hpp  engine.hpp  errorLoger.hpp  gameConstants.hpp  gameObject.hpp  ghostManager.hpp  inputManager.hpp  lapTimer.hpp  leaderboardOverlay.hpp  menu.hpp  networkManager.hpp  nicknameOverlay.hpp  overlay.hpp  textureManager.hpp  updaterOverlay.hpp  utils.hpp
k8s/: api-deployment.yaml  db-deployment.yaml
leaderboard_api/: Dockerfile  database.py  main.py  models.py  requirements.txt
src/: collisionManager.cpp  debugOverlay.cpp  engine.cpp  errorLoger.cpp  gameObject.cpp  ghostManager.cpp  inputManager.cpp  lapTimer.cpp  leaderboardOverlay.cpp  main.cpp  menu.cpp  networkManager.cpp  nicknameOverlay.cpp  textureManager.cpp  updaterOverlay.cpp  utils.cpp
